--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "repository" :
       { "type" : "git",
-        "url" : "https://github.com/Otouto/FourInRow.git"
+        "url" : "https://github.com/Otouto/4inrow.git"
   },
   "keywords": [
     "ES6",
